--- a/app/src/main/res/layout/activity_first_screen.xml
+++ b/app/src/main/res/layout/activity_first_screen.xml
@@ -4,6 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="3"
+    android:orientation="vertical"
+    android:weightSum="3"
     tools:context=".FirstScreen">
 
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:paddingLeft="15dp"
+        android:textColor="@color/black"
+        android:text="Sections" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_margin="10dp"
+        android:textSize="20sp"
+        android:background="@drawable/background"
+        android:paddingLeft="20dp"
+        android:drawableLeft="@drawable/_681067611604779598"
+        android:text="Main Dish" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_margin="10dp"
+        android:textSize="20sp"
+        android:paddingLeft="20dp"
+        android:background="@drawable/background"
+        android:drawableLeft="@drawable/_396024801535956910"
+        android:text="Appetizers" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_margin="10dp"
+        android:textSize="20sp"
+        android:paddingLeft="20dp"
+        android:drawableLeft="@drawable/_473260331606066368"
+        android:background="@drawable/background"
+        android:text="Desserts" />
 </LinearLayout>
